more fixes, tests and linter

--- a/src/azure-cli/azure/cli/command_modules/sql/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/sql/linter_exclusions.yml
@@ -7,4 +7,61 @@ sql db export:
 sql db import:
     rule_exclusions:
     - faulty_help_example_rule
+sql db replica:
+    rule_exclusions:
+    - require_wait_command_if_no_wait
+sql db:
+    rule_exclusions:
+    - require_wait_command_if_no_wait
+sql dw:
+    rule_exclusions:
+    - require_wait_command_if_no_wait
+sql elastic-pool:
+    rule_exclusions:
+    - require_wait_command_if_no_wait
+sql mi:
+    rule_exclusions:
+    - require_wait_command_if_no_wait
+sql midb short-term-retention-policy:
+    rule_exclusions:
+    - require_wait_command_if_no_wait
+sql midb:
+    rule_exclusions:
+    - require_wait_command_if_no_wait
+sql stg:
+    rule_exclusions:
+    - require_wait_command_if_no_wait
+sql virtual-cluster:
+    rule_exclusions:
+    - require_wait_command_if_no_wait
+sql db classification list:
+    rule_exclusions:
+    - missing_parameter_help
+sql stg:
+    rule_exclusions:
+    - no_required_location_param
+sql db copy:
+    rule_exclusions:
+    - parameter_should_not_end_in_resource_group
+sql db ltr-backup restore:
+    rule_exclusions:
+    - parameter_should_not_end_in_resource_group
+sql db replica:
+    rule_exclusions:
+    - parameter_should_not_end_in_resource_group
+sql failover-group:
+    rule_exclusions:
+    - parameter_should_not_end_in_resource_group
+sql instance-failover-group:
+    rule_exclusions:
+    - parameter_should_not_end_in_resource_group
+sql midb ltr-backup restore:
+    rule_exclusions:
+    - parameter_should_not_end_in_resource_group
+sql midb restore:
+    rule_exclusions:
+    - parameter_should_not_end_in_resource_group
+sql server dns-alias:
+    rule_exclusions:
+    - parameter_should_not_end_in_resource_group
 ...
