help_for_move, linter and az file changed

--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -774,6 +774,9 @@ backup recoverypoint list:
     backup_management_type:
       rule_exclusions:
       - option_length_too_long
+    recommended_for_archive:
+      rule_exclusions:
+      - option_length_too_long
 backup recoverypoint show:
   parameters:
     backup_management_type:
