--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -261,6 +261,9 @@ aks create:
       - option_length_too_long
     enable_encryption_at_host:
       rule_exclusions:
+      - option_length_too_long  
+    assign_kubelet_identity:
+      rule_exclusions:
       - option_length_too_long
 aks enable-addons:
   parameters:
