--- a/Dockerfile.spot
+++ b/Dockerfile.spot
@@ -7,7 +7,7 @@
 # This allows Spots to be created directly from PRs.
 # The major difference between Dockerfile.spot and Dockerfile is the latter depends on alpine and this one does not.
 
-ARG PYTHON_VERSION="3.6.4"
+ARG PYTHON_VERSION="3.7.16"
 
 FROM python:$PYTHON_VERSION
 
@@ -15,11 +15,11 @@ RUN apt-get install -y ca-certificates curl openssl git \
  && apt-get install -y gcc make libffi-dev \
  && update-ca-certificates
 
-ARG JP_VERSION="0.1.3"
+ARG JP_VERSION="1.1.0"
 
-RUN curl https://github.com/jmespath/jp/releases/download/${JP_VERSION}/jp-linux-amd64 -o /usr/local/bin/jp \
+RUN wget https://github.com/jmespath-community/jp/releases/download/v${JP_VERSION}/jp-linux-amd64 -O /usr/local/bin/jp \
  && chmod +x /usr/local/bin/jp \
- && pip install --no-cache-dir --upgrade jmespath-terminal
+ && pip install --no-cache-dir --upgrade jmespath-community-terminal
 
 WORKDIR azure-cli
 COPY . /azure-cli
@@ -28,9 +28,9 @@ COPY . /azure-cli
 # openssh - included for ssh-keygen
 # ca-certificates
 
-# curl - required for installing jp
+# wget - required for installing jp
 # pip wheel - required for CLI packaging
-# jmespath-terminal - we include jpterm as a useful tool
+# jmespath-community-terminal - we include jpterm as a useful tool
 # 1. Build packages and store in tmp dir
 # 2. Install the cli and the other command modules that weren't included
 RUN /bin/bash -c 'TMP_PKG_DIR=$(mktemp -d); \
