--- a/azure-pipelines-full-tests.yml
+++ b/azure-pipelines-full-tests.yml
@@ -33,6 +33,7 @@ jobs:
       pythonVersion: '$(python.version)'
       profile: '2020-09-01-hybrid'
       fullTest: true
+      jobName: 'FullTest'
 
 - job: AutomationTest20190301
   displayName: Automation Test (Profile 2019-03-01)
@@ -51,6 +52,7 @@ jobs:
       pythonVersion: '$(python.version)'
       profile: '2019-03-01-hybrid'
       fullTest: true
+      jobName: 'FullTest'
 
 - job: AutomationTest20180301
   displayName: Automation Test (Profile 2018-03-01)
@@ -69,6 +71,7 @@ jobs:
       pythonVersion: '$(python.version)'
       profile: '2018-03-01-hybrid'
       fullTest: true
+      jobName: 'FullTest'
 
 - job: AutomationFullTestPython39ProfileLatest
   displayName: Automation Full Test Python39 Profile Latest
@@ -102,6 +105,7 @@ jobs:
       instance_cnt: '8'
       instance_idx: '$(Instance_idx)'
       fullTest: true
+      jobName: 'FullTest'
 
 - job: AutomationFullTestPython310ProfileLatest
   displayName: Automation Full Test Python310 Profile Latest
@@ -135,3 +139,4 @@ jobs:
       instance_cnt: '8'
       instance_idx: '$(Instance_idx)'
       fullTest: true
+      jobName: 'FullTest'
