--- a/.azure-pipelines/templates/automation_test.yml
+++ b/.azure-pipelines/templates/automation_test.yml
@@ -76,20 +76,28 @@ steps:
       PYTHON_VERSION: ${{ parameters.pythonVersion }}
       JOB_NAME: ${{ parameters.jobName }}
   - bash: |
-      pipelineTestResult='false'
-      if [[ -f '$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/pipeline_result_${{ parameters.pythonVersion }}_${{ parameters.profile }}_${{ parameters.instance_idx }}.json' ]]; then
-        pipelineTestResult='true'
+      pipelineTestJson='false'
+      if [[ -f '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/pipeline_result_${{ parameters.pythonVersion }}_${{ parameters.profile }}_${{ parameters.instance_idx }}.json' ]]; then
+        pipelineTestJson='true'
       fi
-      echo "##vso[task.setvariable variable=pipelineTestResult]pipelineTestResult"
+      echo pipelineTestJson
+      echo "##vso[task.setvariable variable=pipelineTestJson]pipelineTestJson"
+
+      pipelineTestXml='false'
+      if [[ -f '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/pipeline_result_${{ parameters.pythonVersion }}_${{ parameters.profile }}_${{ parameters.instance_idx }}.json' ]]; then
+        pipelineTestXml='true'
+      fi
+      echo pipelineTestXml
+      echo "##vso[task.setvariable variable=pipelineTestXml]pipelineTestXml"
   - task: PublishBuildArtifacts@1
-    condition: and(succeededOrFailed(), eq(variables.pipelineTestResult, 'true'))
+    condition: and(succeededOrFailed(), eq(variables.pipelineTestJson, 'true'))
     inputs:
       # /home/cloudtest/.azdev/env_config/mnt/vss/_work/1/s/env/pipeline_result_3.8_latest_1.json
-      PathtoPublish: '$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/pipeline_result_${{ parameters.pythonVersion }}_${{ parameters.profile }}_${{ parameters.instance_idx }}.json'
+      PathtoPublish: '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/pipeline_result_${{ parameters.pythonVersion }}_${{ parameters.profile }}_${{ parameters.instance_idx }}.json'
       ArtifactName: 'test_results'
       publishLocation: 'Container'
   - task: PublishTestResults@2
-    condition: succeededOrFailed()
+    condition: and(succeededOrFailed(), eq(variables.pipelineTestXml, 'true'))
     inputs:
       testResultsFiles: '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_*.xml'
       testRunTitle: 'CLI full test results of instance ${{ parameters.instance_idx }}'
