--- a/scripts/regression_test/extension_regression_test.yml
+++ b/scripts/regression_test/extension_regression_test.yml
@@ -86,6 +86,12 @@ jobs:
       inlineScript: |
         set -ev
         pwd
+        if [[ -n "$(CUSTOM_CLI_REPO)" && -n "$(CUSTOM_CLI_BRANCH)"]]; then
+          git remote add ${CUSTOM_CLI_REPO} https://github.com/${CUSTOM_CLI_REPO}/azure-cli.git
+          git fetch ${CUSTOM_CLI_REPO} $(CUSTOM_CLI_BRANCH)
+
+          git checkout -b ${GITHUB_BRANCH} ${GITHUB_REPO}/${GITHUB_BRANCH}
+        fi
         git clone https://github.com/Azure/azure-cli-extensions.git
         cd azure-cli-extensions
 
